# cutempl

./: CMakeLists.txt  LICENSE
cmake/: CuteMPLConfig.cmake.in
include/cutempl/: cutempl.hpp  cutempl_fwd.hpp  cutempl_testing.hpp
include/cutempl/containers/: type_list.hpp
include/cutempl/hooks/: additive_identity.hpp  less.hpp
include/cutempl/metafunctions/: all.hpp  any.hpp  append.hpp  apply.hpp  apply_of.hpp  at.hpp  compose.hpp  conjunction_of.hpp  contains.hpp  curry.hpp  disjunction_of.hpp  enumerate.hpp  extract_type.hpp  filter.hpp  find_if.hpp  front.hpp  game_of_life.hpp  get_arg.hpp  identity.hpp  invoke.hpp  is_empty.hpp  just.hpp  list_size.hpp  map.hpp  negation_of.hpp  on_args.hpp  partition.hpp  pop_back.hpp  pop_front.hpp  predicate_conjunction.hpp  push_back.hpp  push_front.hpp  reverse.hpp  select.hpp  set_insert.hpp  set_insert_if.hpp  set_intersection.hpp  set_union.hpp  sort.hpp  sum.hpp  (+3 more)
include/cutempl/testing/: expect_same.hpp  result_output_helpers.hpp
include/cutempl/utils/: as_metafunction_class.hpp  fold_over.hpp  indexed.hpp  lambda.hpp  not_a_type.hpp  overloads.hpp  std_type_traits.hpp  value_lambda.hpp  wrap.hpp  wrap_value.hpp
tests/: CMakeLists.txt  test_at.cpp  test_common.hpp  test_compose.cpp  test_conjunction_of.cpp  test_curry.cpp  test_find_if.cpp  test_game_of_life.cpp  test_negation_of.cpp  test_reverse.cpp  test_set_insert.cpp  test_sort.cpp  test_zip.cpp
